2013-09-17  Romain Francois <romain@r-enthusiasts.com>

	* R/*: Updated to reflect newer Rcpp features
	* src/*: Idem
	* man/*: Corresponding documentation

2013-01-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): New version 0.1.6

	* DESCRIPTION (Description): Mention http://gallery.rcpp.org
	* man/RcppExamples-package.Rd: Idem

	* inst/NEWS.Rd: Moved from directory above per CRAN request

2012-12-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): New version 0.1.5

	* DESCRIPTION (Depends, Imports): No longer use RcppClassic
	* NAMESPACE: Updated accordingly

	* R/RcppDateExample.R (RcppDateExample): No longer call 'classic'
	example moved to new package RcppClassicExamples
	* R/RcppMatrixExample.R (RcppMatrixExample): Idem
	* R/RcppParamsExample.R (RcppParamsExample): Idem
	* R/RcppStringVectorExample.R (RcppStringVectorExample): Idem
	* R/RcppVectorExample.R (RcppVectorExample): Idem

	* man/RcppExamples-package.Rd: Update Description:

	* src/Makevars (PKG_LIBS): Remove RcppClassic use
	* src/Makevars.win (PKG_LIBS): Idem

	* src/newRcppMatrixExample.cpp: Corrected header use
	* src/newRcppVectorExample.cpp: Idem

2012-08-09  Dirk Eddelbuettel  <edd@dexter>

 	* DESCRIPTION: Release 0.1.4

	* src/RcppRNGs.cpp: New example of generating RNG draws
	* R/RcppRNGs.R: New R function to call new example
	* man/RcppRNGs.Rd: New manual page for new example

	* NEWS.Rd: Converted from NEWS

	* DESCRIPTION: Changed Maintainer: to single person per CRAN Policy

2011-12-28  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION: Release 0.1.3

	* src/newRcppDateExample.cpp: switch from std::cout to the new
	Rcpp::Rcout device available since Rcpp 0.9.8
	* src/classicRcppDateExample.cpp: idem

	* DESCRIPTION: Depends on Rcpp (>= 0.9.9) for Rcpp::Rcout

2011-04-08  Dirk Eddelbuettel  <edd@debian.org>

	* R/RcppDataFrame.R: Added new example for Rcpp::DataFrame
	* src/RcppDataFrame.cpp: C++ source for new example