@@ -1,0 +1,6 @@
+.gitignore
+.git
+.RS_Store
+.travis.yml
+^.*\.Rproj$
+^\.Rproj\.user$
