@@ -1,0 +1,31 @@
+# Sample .travis.yml for R projects.
+#
+# See the r-travis repo and its wiki 
+#     https://github.com/craigcitro/r-travis/
+#     https://github.com/eddelbuettel/r-travis/
+
+language: c
+
+sudo: required
+
+before_install:
+  ## r-travis by Craig Citro et al
+  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
+  - chmod 755 ./travis-tool.sh
+  - ./travis-tool.sh bootstrap
+
+install:
+  - ./travis-tool.sh install_aptget r-cran-rcpp 
+
+script: 
+  - ./travis-tool.sh run_tests
+
+after_failure:
+  - ./travis-tool.sh dump_logs
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
+
+
